<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_maps">

    <fragment
        android:id="@+id/nav_maps"
        android:name="pt.ua.cm.bestwave.ui.maps.MapsFragment"
        android:label="@string/menu_maps"
        tools:layout="@layout/fragment_maps" />
    <fragment
        android:id="@+id/nav_home"
        android:name="pt.ua.cm.bestwave.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_review"
        android:name="pt.ua.cm.bestwave.ui.review.ReviewFragment"
        android:label="@string/menu_review"
        tools:layout="@layout/fragment_review" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="pt.ua.cm.bestwave.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_login"
        android:name="pt.ua.cm.bestwave.ui.authentication.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/nav_register"
        android:name="pt.ua.cm.bestwave.ui.authentication.RegisterFragment"
        android:label="@string/menu_register"
        tools:layout="@layout/fragment_register" />


</navigation>