<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_menu_maps"
            android:title="@string/menu_maps" />
        <item
            android:id="@+id/nav_review"
            android:icon="@drawable/ic_menu_review"
            android:title="@string/menu_review" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_login"
            android:title="@string/menu_login" />
    </group>
</menu>