<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/container_login"
    android:background="@color/white"
    tools:context=".ui.authentication.LoginFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="32dp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/logo"
            android:contentDescription="image_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:text="@string/hello_sign_in_to_your_account"
            android:textColor="#696969"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/colorTextInputBackground"
            app:cardCornerRadius="24dp"
            app:cardElevation="0dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/editTextUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_person"
                    android:drawableLeft="@drawable/ic_person"
                    android:drawablePadding="12dp"
                    android:ems="10"
                    android:hint="@string/hint_username"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:minWidth="320dp"
                    android:minHeight="50dp"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/colorTextInputBackground"
            app:cardCornerRadius="24dp"
            app:cardElevation="0dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawablePadding="12dp"
                    android:hint="@string/hint_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:minWidth="320dp"
                    android:minHeight="50dp" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button_forgot_password"
            style="@style/TextButtonForgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="24dp"
            android:padding="10dp"
            android:text="@string/text_forgot_password" />

        <Button
            android:id="@+id/button_login"
            style="@style/TextButtonLogin"
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/button_sign_in" />

        <LinearLayout
            android:id="@+id/social_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/button_signup"
            style="@style/TextButtonSignIn_Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="20dp"
            android:text="@string/text_signin_signup" />


    </LinearLayout>

</RelativeLayout>