<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container_signup"
    android:background="@color/white"
    tools:context=".ui.authentication.RegisterFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        tools:context="in.insideandroid.template.LoginActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:scrollbarThumbHorizontal="@null"
            android:scrollbarThumbVertical="@null">

            <LinearLayout
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/signup_image_layout"
                    android:layout_gravity="center"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:orientation="vertical"
                    android:layout_marginBottom="8dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/profile_image"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:src="@drawable/user_register_pic"
                        app:civ_border_width="0.5dp"
                        app:civ_border_color="#FF000000"/>

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_margin="1dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        app:srcCompat="@drawable/ic_plus" />
                </RelativeLayout>

                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_signup_message"
                    android:textColor="#696969"
                    android:textSize="16sp"
                    android:layout_marginBottom="16dp"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:cardBackgroundColor="@color/colorTextInputBackground"
                    android:layout_margin="4dp"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="0dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/ic_person"
                        android:drawableLeft="@drawable/ic_person"
                        android:drawablePadding="12dp"
                        android:hint="@string/hint_username"
                        android:inputType="text"
                        android:imeOptions="actionNext"
                        android:minWidth="320dp"
                        android:minHeight="45dp"
                        android:singleLine="true" />
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:cardBackgroundColor="@color/colorTextInputBackground"
                    android:layout_margin="4dp"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="0dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/ic_mail"
                        android:drawableLeft="@drawable/ic_mail"
                        android:drawablePadding="12dp"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:imeOptions="actionNext"
                        android:minWidth="320dp"
                        android:minHeight="45dp"
                        android:singleLine="true" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    app:cardBackgroundColor="@color/colorTextInputBackground"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="0dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="12dp"
                            android:layout_marginRight="12dp"
                            android:background="@android:color/transparent"
                            android:drawableStart="@drawable/ic_person"
                            android:drawableLeft="@drawable/ic_person"
                            android:drawablePadding="12dp"
                            android:hint="@string/hint_name"
                            android:imeOptions="actionNext"
                            android:minWidth="320dp"
                            android:minHeight="45dp"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    app:cardBackgroundColor="@color/colorTextInputBackground"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="0dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_surname"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="12dp"
                            android:layout_marginRight="12dp"
                            android:background="@android:color/transparent"
                            android:drawableStart="@drawable/ic_person"
                            android:drawableLeft="@drawable/ic_person"
                            android:drawablePadding="12dp"
                            android:hint="@string/hint_surname"
                            android:imeOptions="actionNext"
                            android:minWidth="320dp"
                            android:minHeight="45dp"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.cardview.widget.CardView>
                 <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    app:cardBackgroundColor="@color/colorTextInputBackground"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="0dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/et_password_register"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="12dp"
                            android:layout_marginRight="12dp"
                            android:background="@android:color/transparent"
                            android:drawableStart="@drawable/ic_lock"
                            android:drawableLeft="@drawable/ic_lock"
                            android:drawablePadding="12dp"
                            android:hint="@string/hint_password"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword"
                            android:minWidth="320dp"
                            android:minHeight="45dp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    app:cardBackgroundColor="@color/colorTextInputBackground"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="0dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/et_confirm_password_register"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="12dp"
                            android:layout_marginRight="12dp"
                            android:background="@android:color/transparent"
                            android:drawableStart="@drawable/ic_lock"
                            android:drawableLeft="@drawable/ic_lock"
                            android:drawablePadding="12dp"
                            android:hint="@string/hint_confirm_password"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:minWidth="320dp"
                            android:minHeight="45dp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/button_signup"
                    style="@style/TextButtonLogin"
                    android:layout_width="342dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:text="@string/button_sign_up" />

                <Button
                    android:id="@+id/button_goto_login"
                    style="@style/TextButtonSignIn_Login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="20dp"
                    android:text="@string/already_registered_log_in" />
            </LinearLayout>

        </RelativeLayout>


    </ScrollView>
</RelativeLayout>